--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                     text: userId + '\n' + message
                 }
             ]).then(() => {
-                // ウインドウクローズ
-               　　 liff.closeWindow();    
-                // 送信成功時にデータをリセット
-                // document.getElementById('myForm').reset();
-                // updateSpreadsheet(userId, message);
+              // 送信成功時にデータをリセット
+                 document.getElementById('myForm').reset();
+                 updateSpreadsheet(userId, message);
+              // ウインドウクローズ
+                　 liff.closeWindow();    
             }).catch((error) => {
                 console.error('Failed to send message', error);
             });
