--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>アンケート Form</h1>
     <form id="myForm" class="w-75 mx-auto">
         <label for="user_id">User ID:</label>
-        <input type="text" id="user_id" name="user_id" required><br><br>
+        <input class="form-control w-100 mt-1" type="text" id="user_id" name="user_id" required><br><br>
         <label for="message">Message:</label>
-        <input type="text" id="message" name="message" required><br><br>
+        <input class="form-control w-100 mt-1" type="text" id="message" name="message" required><br><br>
         <input type="submit" value="送信">
     </form>
 
