--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Form</title>
+    <title>配信設定</title>
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
 </head>
 <body>
@@ -38,7 +38,7 @@
             try {
                 const profile = await liff.getProfile();
                 const userId = profile.userId;
-                const response = await fetch('https://script.google.com/macros/s/AKfycbzB4sUCF21xtpW7ELYBhCy2F0FQFTo_pHdflWvLofGERPR7akDndsmclKS-0nmusWVC/exec?user_id=' + userId);  // ご自身のGAS WebアプリのURLに置き換えてください
+                const response = await fetch('https://script.google.com/macros/s/exec?user_id=' + userId);  // ご自身のGAS WebアプリのURLに置き換えてください
                 const data = await response.json();
 
                 if (data) {
