--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
 </head>
 <body>
-    <h1>アンケート Form</h1>
-    <form id="myForm" class="w-75 mx-auto">
+    <h1>配信設定</h1>
+    <form id="myForm">
         <label for="user_id">User ID:</label>
-        <input class="form-control w-100 mt-1" type="text" id="user_id" name="user_id" required><br><br>
+        <input type="text" size="30" id="user_id" name="user_id" required><br><br>
         <label for="message">Message:</label>
-        <input class="form-control w-100 mt-1" type="text" id="message" name="message" required><br><br>
+        <input  type="text" size="30" id="message" name="message" required><br><br>
         <input type="submit" value="送信">
     </form>
 
@@ -38,7 +38,7 @@
             try {
                 const profile = await liff.getProfile();
                 const userId = profile.userId;
-                const response = await fetch('https://script.google.com/macros/s/exec?user_id=' + userId);  // ご自身のGAS WebアプリのURLに置き換えてください
+                const response = await fetch('https://script.google.com/macros/s/AKfycbzB4sUCF21xtpW7ELYBhCy2F0FQFTo_pHdflWvLofGERPR7akDndsmclKS-0nmusWVCexec/exec?user_id=' + userId);  // ご自身のGAS WebアプリのURLに置き換えてください
                 const data = await response.json();
 
                 if (data) {
@@ -76,7 +76,7 @@
         // スプレッドシートのデータを更新
         function updateSpreadsheet(userId, message) {
             var xhr = new XMLHttpRequest();
-            xhr.open('POST', 'https://script.google.com/macros/s/AKfycbzB4sUCF21xtpW7ELYBhCy2F0FQFTo_pHdflWvLofGERPR7akDndsmclKS-0nmusWVC/exec', true);  // ご自身のGAS WebアプリのURLに置き換えてください
+            xhr.open('POST', 'https://script.google.com/macros/s/Your_GAS_Web_App_URL/exec', true);  // ご自身のGAS WebアプリのURLに置き換えてください
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
 
             // フォームデータを送信
