--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>配信設定</title>
+    <title>LIFF Form</title>
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
 </head>
 <body>
-    <h1>配信設定</h1>
+    <h1>LIFF Form</h1>
     <form id="myForm">
         <label for="user_id">User ID:</label>
-        <input type="text" size="30" id="user_id" name="user_id" required><br><br>
+        <input type="text" id="user_id" name="user_id" required><br><br>
         <label for="message">Message:</label>
-        <input  type="text" size="30" id="message" name="message" required><br><br>
-        <input type="submit" value="送信">
+        <input type="text" id="message" name="message" required><br><br>
+        <input type="submit" value="Submit">
     </form>
 
     <script>
@@ -28,17 +28,14 @@
         initializeLiff();
 
         // フォームの送信イベントのハンドラ
-//        document.getElementById('myForm').addEventListener('submit', submitForm) ;
-        document.getElementById('myForm').addEventListener('submit', () => {
-            log.textContent = 'Form submitted!';
-  });
+        document.getElementById('myForm').addEventListener('submit', submitForm);
 
         // スプレッドシートのデータを取得し、フォームに表示
         async function displayLiffData() {
             try {
                 const profile = await liff.getProfile();
                 const userId = profile.userId;
-                const response = await fetch('https://script.google.com/macros/s/AKfycbzB4sUCF21xtpW7ELYBhCy2F0FQFTo_pHdflWvLofGERPR7akDndsmclKS-0nmusWVC/exec?user_id=' + userId);  // ご自身のGAS WebアプリのURLに置き換えてください
+                const response = await fetch('https://script.google.com/macros/s/AKfycbxpX395hEiXMLmJS8NbdbmCGKo876fC8rzQNSSHreOpnS8OsYRQShYdkG8WXmWTCrYo/exec?user_id=' + userId);  // ご自身のGAS WebアプリのURLに置き換えてください
                 const data = await response.json();
 
                 if (data) {
@@ -60,14 +57,12 @@
             liff.sendMessages([
                 {
                     type: 'text',
-                    text: userId + '\n' + message
+                    text: 'User ID: ' + userId + '\nMessage: ' + message
                 }
             ]).then(() => {
-              // 送信成功時にデータをリセット
-                 document.getElementById('myForm').reset();
-                 updateSpreadsheet(userId, message);
-              // ウインドウクローズ
-                　 liff.closeWindow();    
+                // 送信成功時にデータをリセット
+                document.getElementById('myForm').reset();
+                updateSpreadsheet(userId, message);
             }).catch((error) => {
                 console.error('Failed to send message', error);
             });
@@ -80,8 +75,7 @@
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
 
             // フォームデータを送信
-            // var formData = 'user_id=' + encodeURIComponent(userId) + '&message=' + encodeURIComponent(message);
-            var formData = encodeURIComponent(userId) + encodeURIComponent(message);
+            var formData = 'user_id=' + encodeURIComponent(userId) + '&message=' + encodeURIComponent(message);
             xhr.send(formData);
         }
     </script>
